fixed shift

--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ body {
     display: block;
     margin-right: 10.1484%;
     width: 430.4452%;
-    margin-left: 18.35807%;
+    margin-left: 14.68645%;
     padding: 35px; }
     .work-item:last-child {
       margin-right: 0; }
